SET(WT_PROJECT_SOURCE
main.C
ToDoApp.C
UserAccount.C
Login.C
TodoWidget.C
)

if(UNIX)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
endif()

SET(WT_PROJECT_TARGET todo-app.wt)

FIND_PACKAGE(Boost COMPONENTS system thread signals)

FIND_LIBRARY(wt wt)

FIND_LIBRARY(wthttp wthttp)

ADD_EXECUTABLE(${WT_PROJECT_TARGET} ${WT_PROJECT_SOURCE})

TARGET_LINK_LIBRARIES(${SSL_LIBRARIES} ${BOOST_WT_LIBRARIES} ${BOOST_WTHTTP_LIBRARIES} ${ZLIB_LIBRARIES} ${ASIO_LIBRARIES} ${WT_PROJECT_TARGET} ${Boost_SYSTEM_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_SIGNALS_LIBRARY} wt wthttp wtdbo wtdbosqlite3)

INCLUDE_DIRECTORIES(/usr/local/include/Wt)
